--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "jest": "26.4.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "serverless": "^3.23.0",
+    "serverless-offline": "^11.2.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
