--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rimraf": "^3.0.2",
     "serverless": "^3.23.0",
     "serverless-offline": "^11.2.1",
+    "serverless-webpack": "^5.10.0",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
