feat: add typeorm and entity

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,14 @@ provider:
   runtime: nodejs16.x
   region: eu-west-1 
 
+  environment:
+    DATABASE_HOST: ${env:DATABASE_HOST}
+    DATABASE_PORT: ${env:DATABASE_PORT}
+    DATABASE_USERNAME: ${env:DATABASE_USERNAME}
+    DATABASE_PASSWORD: ${env:DATABASE_PASSWORD}
+    DATABASE_NAME: ${env:DATABASE_NAME}
+    PORT: ${env:PORT}
+
 functions:
   main:
     handler: dist/main.handler
