--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
     "@vendia/serverless-express": "^4.10.1",
+    "@nestjs/typeorm": "^7.1.5",
     "aws-lambda": "^1.0.7",
     "helmet": "^4.2.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "typeorm": "^0.2.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.2",
@@ -46,7 +49,7 @@
     "@types/aws-lambda": "^8.10.108",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
-    "@types/node": "^13.13.30",
+    "@types/node": "^13.13.52",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
